--- a/Elijah_F1_1_HuggingFace.ipynb
+++ b/Elijah_F1_1_HuggingFace.ipynb
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -112,26 +112,23 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: transformers in /opt/homebrew/lib/python3.10/site-packages (4.32.1)\n",
-            "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /opt/homebrew/lib/python3.10/site-packages (from transformers) (0.13.3)\n",
-            "Requirement already satisfied: requests in /opt/homebrew/lib/python3.10/site-packages (from transformers) (2.31.0)\n",
-            "Requirement already satisfied: packaging>=20.0 in /opt/homebrew/lib/python3.10/site-packages (from transformers) (23.0)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /opt/homebrew/lib/python3.10/site-packages (from transformers) (4.66.1)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /Users/elijahlueders/Library/Python/3.10/lib/python/site-packages (from transformers) (6.0)\n",
-            "Requirement already satisfied: numpy>=1.17 in /opt/homebrew/lib/python3.10/site-packages (from transformers) (1.24.3)\n",
-            "Requirement already satisfied: safetensors>=0.3.1 in /opt/homebrew/lib/python3.10/site-packages (from transformers) (0.3.3)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.15.1 in /opt/homebrew/lib/python3.10/site-packages (from transformers) (0.16.4)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /opt/homebrew/lib/python3.10/site-packages (from transformers) (2023.8.8)\n",
-            "Requirement already satisfied: filelock in /opt/homebrew/lib/python3.10/site-packages (from transformers) (3.12.3)\n",
-            "Requirement already satisfied: fsspec in /opt/homebrew/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (2023.6.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /opt/homebrew/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (4.7.1)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/homebrew/lib/python3.10/site-packages (from requests->transformers) (3.2.0)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/homebrew/lib/python3.10/site-packages (from requests->transformers) (1.26.16)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /Users/elijahlueders/Library/Python/3.10/lib/python/site-packages (from requests->transformers) (3.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /opt/homebrew/lib/python3.10/site-packages (from requests->transformers) (2023.7.22)\n",
-            "\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.10 -m pip install --upgrade pip\u001b[0m\n"
+            "Requirement already satisfied: transformers in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (4.32.1)\n",
+            "Requirement already satisfied: filelock in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (3.12.2)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.15.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (0.16.4)\n",
+            "Requirement already satisfied: numpy>=1.17 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (1.24.3)\n",
+            "Requirement already satisfied: packaging>=20.0 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (23.1)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (6.0.1)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (2023.8.8)\n",
+            "Requirement already satisfied: requests in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (2.31.0)\n",
+            "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (0.13.3)\n",
+            "Requirement already satisfied: safetensors>=0.3.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (0.3.3)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (4.66.1)\n",
+            "Requirement already satisfied: fsspec in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (2023.6.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (4.5.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (3.2.0)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (3.4)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (1.26.16)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (2023.7.22)\n"
           ]
         }
       ],
@@ -176,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -190,11 +187,7 @@
           "output_type": "stream",
           "text": [
             "No model was supplied, defaulted to distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert-base-uncased-finetuned-sst-2-english).\n",
-            "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
-            "All PyTorch model weights were used when initializing TFDistilBertForSequenceClassification.\n",
-            "\n",
-            "All the weights of TFDistilBertForSequenceClassification were initialized from the PyTorch model.\n",
-            "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFDistilBertForSequenceClassification for predictions without further training.\n"
+            "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
           ]
         },
         {
@@ -203,7 +196,7 @@
               "[{'label': 'POSITIVE', 'score': 0.9984305500984192}]"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -238,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -251,7 +244,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[{'label': 'POSITIVE', 'score': 0.9991173148155212}, {'label': 'NEGATIVE', 'score': 0.9557347297668457}, {'label': 'NEGATIVE', 'score': 0.9962737560272217}]\n"
+            "[{'label': 'POSITIVE', 'score': 0.9991173148155212}, {'label': 'NEGATIVE', 'score': 0.9557351469993591}, {'label': 'NEGATIVE', 'score': 0.9962737560272217}]\n"
           ]
         }
       ],
@@ -273,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -309,27 +302,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "OkjIBTClyKOG"
       },
-      "outputs": [
-        {
-          "ename": "ValueError",
-          "evalue": "Could not load model SamLowe/roberta-base-go_emotions with any of the following classes: (<class 'transformers.models.auto.modeling_tf_auto.TFAutoModelForSequenceClassification'>, <class 'transformers.models.roberta.modeling_tf_roberta.TFRobertaForSequenceClassification'>).",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m classifier \u001b[39m=\u001b[39m pipeline(\u001b[39m\"\u001b[39;49m\u001b[39msentiment-analysis\u001b[39;49m\u001b[39m\"\u001b[39;49m, model\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mSamLowe/roberta-base-go_emotions\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-            "File \u001b[0;32m/opt/homebrew/lib/python3.10/site-packages/transformers/pipelines/__init__.py:807\u001b[0m, in \u001b[0;36mpipeline\u001b[0;34m(task, model, config, tokenizer, feature_extractor, image_processor, framework, revision, use_fast, token, device, device_map, torch_dtype, trust_remote_code, model_kwargs, pipeline_class, **kwargs)\u001b[0m\n\u001b[1;32m    805\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(model, \u001b[39mstr\u001b[39m) \u001b[39mor\u001b[39;00m framework \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    806\u001b[0m     model_classes \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mtf\u001b[39m\u001b[39m\"\u001b[39m: targeted_task[\u001b[39m\"\u001b[39m\u001b[39mtf\u001b[39m\u001b[39m\"\u001b[39m], \u001b[39m\"\u001b[39m\u001b[39mpt\u001b[39m\u001b[39m\"\u001b[39m: targeted_task[\u001b[39m\"\u001b[39m\u001b[39mpt\u001b[39m\u001b[39m\"\u001b[39m]}\n\u001b[0;32m--> 807\u001b[0m     framework, model \u001b[39m=\u001b[39m infer_framework_load_model(\n\u001b[1;32m    808\u001b[0m         model,\n\u001b[1;32m    809\u001b[0m         model_classes\u001b[39m=\u001b[39;49mmodel_classes,\n\u001b[1;32m    810\u001b[0m         config\u001b[39m=\u001b[39;49mconfig,\n\u001b[1;32m    811\u001b[0m         framework\u001b[39m=\u001b[39;49mframework,\n\u001b[1;32m    812\u001b[0m         task\u001b[39m=\u001b[39;49mtask,\n\u001b[1;32m    813\u001b[0m         \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mhub_kwargs,\n\u001b[1;32m    814\u001b[0m         \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mmodel_kwargs,\n\u001b[1;32m    815\u001b[0m     )\n\u001b[1;32m    817\u001b[0m model_config \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mconfig\n\u001b[1;32m    818\u001b[0m hub_kwargs[\u001b[39m\"\u001b[39m\u001b[39m_commit_hash\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mconfig\u001b[39m.\u001b[39m_commit_hash\n",
-            "File \u001b[0;32m/opt/homebrew/lib/python3.10/site-packages/transformers/pipelines/base.py:276\u001b[0m, in \u001b[0;36minfer_framework_load_model\u001b[0;34m(model, config, model_classes, task, framework, **model_kwargs)\u001b[0m\n\u001b[1;32m    273\u001b[0m             \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m    275\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(model, \u001b[39mstr\u001b[39m):\n\u001b[0;32m--> 276\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCould not load model \u001b[39m\u001b[39m{\u001b[39;00mmodel\u001b[39m}\u001b[39;00m\u001b[39m with any of the following classes: \u001b[39m\u001b[39m{\u001b[39;00mclass_tuple\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    278\u001b[0m \u001b[39mif\u001b[39;00m framework \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    279\u001b[0m     framework \u001b[39m=\u001b[39m infer_framework(model\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m)\n",
-            "\u001b[0;31mValueError\u001b[0m: Could not load model SamLowe/roberta-base-go_emotions with any of the following classes: (<class 'transformers.models.auto.modeling_tf_auto.TFAutoModelForSequenceClassification'>, <class 'transformers.models.roberta.modeling_tf_roberta.TFRobertaForSequenceClassification'>)."
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "classifier = pipeline(\"sentiment-analysis\", model=\"SamLowe/roberta-base-go_emotions\")"
+        "pipe = pipeline(\"text-classification\", model=\"SamLowe/roberta-base-go_emotions\")\n",
+        "\n"
       ]
     },
     {
@@ -345,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -358,7 +338,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[{'label': 'neutral', 'score': 0.9344079494476318}, {'label': 'admiration', 'score': 0.5409085750579834}, {'label': 'surprise', 'score': 0.7312608957290649}, {'label': 'neutral', 'score': 0.7667409181594849}, {'label': 'neutral', 'score': 0.5689737200737}]\n"
+            "[{'label': 'POSITIVE', 'score': 0.9405280351638794}, {'label': 'POSITIVE', 'score': 0.9991173148155212}, {'label': 'NEGATIVE', 'score': 0.9557351469993591}, {'label': 'NEGATIVE', 'score': 0.9962737560272217}, {'label': 'POSITIVE', 'score': 0.9874647855758667}]\n"
           ]
         }
       ],
@@ -376,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -389,11 +369,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "'Dogs are mammals.' was labeled neutral with a score of 0.9344079494476318\n",
-            "'It's really cool that you can get classifications for a whole batch of text' was labeled admiration with a score of 0.5409085750579834\n",
-            "'I wonder if the rest of the class will be this easy.' was labeled surprise with a score of 0.7312608957290649\n",
-            "'Spolier alert: it won't be.' was labeled neutral with a score of 0.7667409181594849\n",
-            "'Today is Thursday.' was labeled neutral with a score of 0.5689737200737\n"
+            "'Dogs are mammals.' was labeled POSITIVE with a score of 0.9405280351638794\n",
+            "'It's really cool that you can get classifications for a whole batch of text' was labeled POSITIVE with a score of 0.9991173148155212\n",
+            "'I wonder if the rest of the class will be this easy.' was labeled NEGATIVE with a score of 0.9557351469993591\n",
+            "'Spolier alert: it won't be.' was labeled NEGATIVE with a score of 0.9962737560272217\n",
+            "'Today is Thursday.' was labeled POSITIVE with a score of 0.9874647855758667\n"
           ]
         }
       ],
@@ -404,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "Z42s0ayOdeY4"
       },
@@ -421,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -434,11 +414,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'label': 'LABEL_0', 'score': 0.5484333038330078}\n",
-            "{'label': 'LABEL_0', 'score': 0.6328231692314148}\n",
-            "{'label': 'LABEL_0', 'score': 0.542167067527771}\n",
-            "{'label': 'LABEL_0', 'score': 0.7175154685974121}\n",
-            "{'label': 'LABEL_0', 'score': 0.6996312141418457}\n"
+            "{'label': 'neutral', 'score': 0.5546063780784607}\n",
+            "{'label': 'neutral', 'score': 0.9362563490867615}\n",
+            "{'label': 'neutral', 'score': 0.937929093837738}\n",
+            "{'label': 'approval', 'score': 0.3685752749443054}\n",
+            "{'label': 'neutral', 'score': 0.8340733647346497}\n"
           ]
         }
       ],
