--- a/Elijah_F1_Applied Exploration.ipynb
+++ b/Elijah_F1_Applied Exploration.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Fortnight 1: Demo\n"
+    "# Fortnight 1: Applied Exploratio\n"
    ]
   },
   {
@@ -28,6 +28,7 @@
    },
    "source": [
     "## Applied Exploration\n",
+    "### *pulled from F1_2*\n",
     "\n",
     "Go to the Hugging Face models page: https://huggingface.co/models\n",
     "* Click `Text Classification`\n",
