--- a/Elijah_F5_2_MachineLearning.ipynb
+++ b/Elijah_F5_2_MachineLearning.ipynb
@@ -122,7 +122,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install datasets sklearn keras tensorflow"
+    "!{sys.executable} -m pip install datasets sklearn keras tensorflow transformers"
    ]
   },
   {
