--- a/Elijah_F1_1_HuggingFace.ipynb
+++ b/Elijah_F1_1_HuggingFace.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -112,9 +112,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: transformers in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (4.32.1)\n",
-      "Requirement already satisfied: filelock in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (3.12.2)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.15.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (0.16.4)\n",
+      "Requirement already satisfied: transformers in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (4.33.2)\n",
+      "Requirement already satisfied: filelock in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (3.12.4)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.15.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (0.17.2)\n",
       "Requirement already satisfied: numpy>=1.17 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (1.24.3)\n",
       "Requirement already satisfied: packaging>=20.0 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (23.1)\n",
       "Requirement already satisfied: pyyaml>=5.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from transformers) (6.0.1)\n",
@@ -127,8 +127,11 @@
       "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (4.5.0)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (3.2.0)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (1.26.16)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (2023.7.22)\n"
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (1.26.18)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/elijahlueders/Library/Caches/pypoetry/virtualenvs/nlp-local-JrpFJHsc-py3.10/lib/python3.10/site-packages (from requests->transformers) (2023.7.22)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
      ]
     }
    ],
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -196,7 +199,7 @@
        "[{'label': 'POSITIVE', 'score': 0.9984305500984192}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,6 +210,126 @@
     "classifier = pipeline(\"sentiment-analysis\")\n",
     "\n",
     "classifier(\"I love how easy it is to build sentiment-aware applications with the transformers library!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.99950110912323}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"I hate how easy it is to build sentiment-aware applications with the transformers library!\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.9993353486061096}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"I don't know how to feel about how easy it is to build sentiment-aware applications with the transformers library!\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.9993649125099182}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"I'm neutral about how easy it is to build sentiment-aware applications with the transformers library!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.9974257349967957}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"i love to hate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.9995905756950378}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"I am here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.9790391325950623}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"meh\")"
    ]
   },
   {
@@ -231,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -266,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -302,14 +425,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "id": "OkjIBTClyKOG"
    },
    "outputs": [],
    "source": [
-    "pipe = pipeline(\"text-classification\", model=\"SamLowe/roberta-base-go_emotions\")\n",
-    "\n"
+    "pipe = pipeline(\"text-classification\", model=\"SamLowe/roberta-base-go_emotions\")"
    ]
   },
   {
@@ -324,8 +446,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "hSd6Rb75Ymlp"
+   },
+   "source": [
+    "<mark style=\"background: green\">There are more labels than the pos/neg. Instead there are a set of emotions that classify each phrase</mark>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -338,7 +469,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'label': 'POSITIVE', 'score': 0.9405280351638794}, {'label': 'POSITIVE', 'score': 0.9991173148155212}, {'label': 'NEGATIVE', 'score': 0.9557351469993591}, {'label': 'NEGATIVE', 'score': 0.9962737560272217}, {'label': 'POSITIVE', 'score': 0.9874647855758667}]\n"
+      "[{'label': 'neutral', 'score': 0.9344080686569214}, {'label': 'admiration', 'score': 0.5409094095230103}, {'label': 'surprise', 'score': 0.7312608957290649}, {'label': 'neutral', 'score': 0.7667404413223267}, {'label': 'neutral', 'score': 0.5689741373062134}]\n"
      ]
     }
    ],
@@ -350,13 +481,13 @@
     "    \"Spolier alert: it won't be.\",\n",
     "    \"Today is Thursday.\",\n",
     "    ]\n",
-    "results = classifier(text_list)\n",
+    "results = pipe(text_list)\n",
     "print(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -369,11 +500,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'Dogs are mammals.' was labeled POSITIVE with a score of 0.9405280351638794\n",
-      "'It's really cool that you can get classifications for a whole batch of text' was labeled POSITIVE with a score of 0.9991173148155212\n",
-      "'I wonder if the rest of the class will be this easy.' was labeled NEGATIVE with a score of 0.9557351469993591\n",
-      "'Spolier alert: it won't be.' was labeled NEGATIVE with a score of 0.9962737560272217\n",
-      "'Today is Thursday.' was labeled POSITIVE with a score of 0.9874647855758667\n"
+      "'Dogs are mammals.' was labeled neutral with a score of 0.9344080686569214\n",
+      "'It's really cool that you can get classifications for a whole batch of text' was labeled admiration with a score of 0.5409094095230103\n",
+      "'I wonder if the rest of the class will be this easy.' was labeled surprise with a score of 0.7312608957290649\n",
+      "'Spolier alert: it won't be.' was labeled neutral with a score of 0.7667404413223267\n",
+      "'Today is Thursday.' was labeled neutral with a score of 0.5689741373062134\n"
      ]
     }
    ],
@@ -384,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {
     "id": "Z42s0ayOdeY4"
    },
@@ -401,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -432,15 +563,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "hSd6Rb75Ymlp"
-   },
-   "source": [
-    "There are different/more labels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "g6qn4tW-yKOG"
    },
    "source": [
@@ -463,6 +585,11 @@
     "        - what kind of data was it trained on?\n",
     "        - are they based on some other model and trained on new data (*fine-tuned*) for a specific task?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
