--- a/Elijah_F1_2_DataEvaluation.ipynb
+++ b/Elijah_F1_2_DataEvaluation.ipynb
@@ -1113,6 +1113,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background: #007acc; color: white; border-radius: 10px; padding: 10px; width: fit-content; max-width: 70%; font-size: 1rem\">\n",
+    "    turn it into a function to try some different sample sizes\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 217,
    "metadata": {},
@@ -1214,7 +1223,17 @@
    "source": [
     "sample_size = 2500\n",
     "results = classifier(dataset[\"test\"][\"review_body\"][0:sample_size])\n",
-    "print(f\"For {sample_size} samples, the accuracy is {calculate_accuracy(results, dataset)}\")"
+    "print(f\"For {sample_size} samples, the accuracy is {calculate_accuracy(results, dataset)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background: #007acc; color: white; border-radius: 10px; padding: 10px; width: fit-content; max-width: 70%; font-size: 1rem;\">\n",
+    "    the accuracy is going down as the sample size increases probably because the model isn't trained on this dataset and as it is presented with more variety of reviews its chance of getting it right\n",
+    "</div>"
    ]
   },
   {
@@ -1331,16 +1350,6 @@
    "source": [
     "Demo group: Conrad, Saul, Katja, Caitlyn"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
