Update notebook and README.md

--- a/Elijah_F1_1_HuggingFace.ipynb
+++ b/Elijah_F1_1_HuggingFace.ipynb
@@ -447,11 +447,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "hSd6Rb75Ymlp"
-   },
+   "metadata": {},
    "source": [
-    "<mark style=\"background: green\">There are more labels than the pos/neg. Instead there are a set of emotions that classify each phrase</mark>"
+    "<div style=\"background: #007acc; color: white; border-radius: 10px; padding: 10px; width: fit-content; max-width: 70%; font-size: 1rem;\">\n",
+    "    There are more labels than the pos/neg. Instead there are a set of emotions that classify each phrase\n",
+    "</div>"
    ]
   },
   {
