Update Applied Exploration notebook and README

--- a/Elijah_F1_AppliedExploration.ipynb
+++ b/Elijah_F1_AppliedExploration.ipynb
@@ -50,6 +50,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background: #007acc; color: white; border-radius: 10px; padding: 10px; width: fit-content; max-width: 70%; font-size: 1rem;\">\n",
+    "    Dataset: \"mteb/amazon_reviews_multi\" <br/>\n",
+    "     - the data comes from amazon reviews <br/>\n",
+    "     - the English split has 200k rows of training data and 5k each for validation and test <br/>\n",
+    "     - it classifies to 1-5 stars <br/>\n",
+    "    Model: \"philschmid/distilbert-base-multilingual-cased-sentiment-2\" <br/>\n",
+    "     - predicts the likehood that the input is positive, negative, or neutral<br/>\n",
+    "     - it <br/>\n",
+    "     - <br/>\n",
+    "     - <br/>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
