--- a/Elijah_F6_1_NeuralLanguageModeling.ipynb
+++ b/Elijah_F6_1_NeuralLanguageModeling.ipynb
@@ -974,6 +974,193 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n",
+      "WARNING:absl:There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1250/1250 [==============================] - 53s 42ms/step - loss: 0.5760 - accuracy: 0.6862 - val_loss: 0.4885 - val_accuracy: 0.7774\n",
+      "Epoch 2/5\n",
+      "1250/1250 [==============================] - 51s 41ms/step - loss: 0.4416 - accuracy: 0.7987 - val_loss: 0.4544 - val_accuracy: 0.7938\n",
+      "Epoch 3/5\n",
+      "1250/1250 [==============================] - 51s 41ms/step - loss: 0.3977 - accuracy: 0.8267 - val_loss: 0.4549 - val_accuracy: 0.7980\n",
+      "Epoch 4/5\n",
+      "1250/1250 [==============================] - 50s 40ms/step - loss: 0.3751 - accuracy: 0.8363 - val_loss: 0.4625 - val_accuracy: 0.8004\n",
+      "Epoch 5/5\n",
+      "1250/1250 [==============================] - 53s 43ms/step - loss: 0.3597 - accuracy: 0.8454 - val_loss: 0.4631 - val_accuracy: 0.7968\n",
+      "157/157 [==============================] - 2s 11ms/step - loss: 0.4637 - accuracy: 0.7904\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning Rate: 0.01\n",
+      "Test Accuracy: 0.7904000282287598\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1250/1250 [==============================] - 52s 41ms/step - loss: 0.3194 - accuracy: 0.8668 - val_loss: 0.4692 - val_accuracy: 0.8034\n",
+      "Epoch 2/5\n",
+      "1250/1250 [==============================] - 47s 38ms/step - loss: 0.2801 - accuracy: 0.8876 - val_loss: 0.4801 - val_accuracy: 0.8042\n",
+      "Epoch 3/5\n",
+      "1250/1250 [==============================] - 48s 39ms/step - loss: 0.2513 - accuracy: 0.9018 - val_loss: 0.4926 - val_accuracy: 0.8012\n",
+      "Epoch 4/5\n",
+      "1250/1250 [==============================] - 49s 39ms/step - loss: 0.2280 - accuracy: 0.9124 - val_loss: 0.5114 - val_accuracy: 0.8042\n",
+      "Epoch 5/5\n",
+      "1250/1250 [==============================] - 48s 39ms/step - loss: 0.2083 - accuracy: 0.9214 - val_loss: 0.5291 - val_accuracy: 0.7992\n",
+      "157/157 [==============================] - 2s 11ms/step - loss: 0.5309 - accuracy: 0.7964\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n",
+      "WARNING:absl:There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning Rate: 0.001\n",
+      "Test Accuracy: 0.7964000105857849\n",
+      "Epoch 1/5\n",
+      "1250/1250 [==============================] - 51s 40ms/step - loss: 0.1845 - accuracy: 0.9333 - val_loss: 0.5323 - val_accuracy: 0.7994\n",
+      "Epoch 2/5\n",
+      "1250/1250 [==============================] - 50s 40ms/step - loss: 0.1798 - accuracy: 0.9356 - val_loss: 0.5370 - val_accuracy: 0.7996\n",
+      "Epoch 3/5\n",
+      "1250/1250 [==============================] - 49s 39ms/step - loss: 0.1761 - accuracy: 0.9373 - val_loss: 0.5419 - val_accuracy: 0.8002\n",
+      "Epoch 4/5\n",
+      "1250/1250 [==============================] - 49s 39ms/step - loss: 0.1730 - accuracy: 0.9387 - val_loss: 0.5456 - val_accuracy: 0.7994\n",
+      "Epoch 5/5\n",
+      "1250/1250 [==============================] - 49s 39ms/step - loss: 0.1700 - accuracy: 0.9398 - val_loss: 0.5492 - val_accuracy: 0.7986\n",
+      "157/157 [==============================] - 2s 11ms/step - loss: 0.5469 - accuracy: 0.7992\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n",
+      "WARNING:absl:There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning Rate: 0.0001\n",
+      "Test Accuracy: 0.7991999983787537\n",
+      "Epoch 1/5\n",
+      "1250/1250 [==============================] - 48s 38ms/step - loss: 0.1665 - accuracy: 0.9414 - val_loss: 0.5497 - val_accuracy: 0.7986\n",
+      "Epoch 2/5\n",
+      "1250/1250 [==============================] - 48s 38ms/step - loss: 0.1662 - accuracy: 0.9414 - val_loss: 0.5501 - val_accuracy: 0.7988\n",
+      "Epoch 3/5\n",
+      "1250/1250 [==============================] - 49s 39ms/step - loss: 0.1659 - accuracy: 0.9416 - val_loss: 0.5504 - val_accuracy: 0.7988\n",
+      "Epoch 4/5\n",
+      "1250/1250 [==============================] - 49s 39ms/step - loss: 0.1657 - accuracy: 0.9418 - val_loss: 0.5508 - val_accuracy: 0.7990\n",
+      "Epoch 5/5\n",
+      "1250/1250 [==============================] - 48s 39ms/step - loss: 0.1654 - accuracy: 0.9420 - val_loss: 0.5512 - val_accuracy: 0.7990\n",
+      "157/157 [==============================] - 2s 11ms/step - loss: 0.5486 - accuracy: 0.7976\n",
+      "Learning Rate: 1e-05\n",
+      "Test Accuracy: 0.7975999712944031\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.datasets import imdb\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from keras import optimizers\n",
+    "\n",
+    "# load the dataset\n",
+    "vocab_size = 10000\n",
+    "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=vocab_size)\n",
+    "\n",
+    "x = np.concatenate((x_train, x_test), axis=0)\n",
+    "y = np.concatenate((y_train, y_test), axis=0)\n",
+    "\n",
+    "tokenizer = Tokenizer(num_words=vocab_size, oov_token='<OOV>')\n",
+    "tokenizer.fit_on_sequences(x)\n",
+    "\n",
+    "max_sequence_length = 100  # You can set a different maximum sequence length\n",
+    "x_padded = pad_sequences(x, maxlen=max_sequence_length, padding='post', truncating='post')\n",
+    "\n",
+    "x_train, x_temp, y_train, y_temp = train_test_split(x_padded, y, train_size = 0.8, random_state=42)\n",
+    "x_val, x_test, y_val, y_test = train_test_split(x_temp, y_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# model\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(input_dim=vocab_size, output_dim=128, input_length=max_sequence_length))\n",
+    "model.add(LSTM(64, return_sequences=False))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "# different learning rates\n",
+    "learning_rates = [0.01, 0.001, 0.0001, 0.00001]  # Add or remove learning rates as needed\n",
+    "\n",
+    "for learning_rate in learning_rates:\n",
+    "    optimizer = optimizers.Adam(learning_rate=learning_rate)\n",
+    "    \n",
+    "    # Compile the model with the current learning rate\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=optimizer, metrics=[\"accuracy\"])\n",
+    "    \n",
+    "    # Train the model\n",
+    "    history = model.fit(x_train, y_train, epochs=5, batch_size=32, validation_data=(x_val, y_val))\n",
+    "    \n",
+    "    # Evaluate the model on the test set\n",
+    "    test_loss, test_acc = model.evaluate(x_test, y_test)\n",
+    "    print(f'Learning Rate: {learning_rate}')\n",
+    "    print(f'Test Accuracy: {test_acc}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background: #007acc; color: white; border-radius: 10px; padding: 10px; width: fit-content; max-width: 70%; font-size: 1rem;\">\n",
+    "    a learning rate around 0.001 appears to strike a balance between training stability and model performance for this sentiment analysis task on the IMDb dataset. Further tuning with other parameters could give better results\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -1015,7 +1202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
