--- a/Elijah_F5_2_MachineLearning.ipynb
+++ b/Elijah_F5_2_MachineLearning.ipynb
@@ -845,7 +845,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<mark style=\"background: lightgreen\"> It's okay but could use improvement, if you look at how it is split on the classes it is about 50% so 72% is better than guessing or choosing spam from all predictions</mark>\n"
+    "<div style=\"background: #007acc; color: white; border-radius: 10px; padding: 10px; width: fit-content; max-width: 70%; font-size: 1rem;\">\n",
+    "    It's okay but could use improvement, if you look at how it is split on the classes it is about 50% so 72% is better than guessing or choosing spam from all predictions\n",
+    "</div>"
    ]
   },
   {
